--- a/src/components/Layout/ListHeader.module.css
+++ b/src/components/Layout/ListHeader.module.css
@@ -23,11 +23,14 @@
   transform: translate(-50%, -50%);
 }
 
-.menu li {
+.link {
   padding: 1rem 0.5rem 0.8rem;
   margin: 0 1rem;
+  text-decoration: none;
+  color: white;
 }
 
-.menu li:hover {
+.link:hover,
+.active {
   border-bottom: 2px solid #ef697d;
 }
