--- a/src/components/Layout/ListHeader.module.css
+++ b/src/components/Layout/ListHeader.module.css
@@ -1,26 +1,22 @@
 .header {
   color: white;
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   padding: 2rem 4rem 0.5rem;
   background-color: #101e49;
-  position: relative;
-  z-index: 0;
 }
 
 .title {
   font-size: 1.5rem;
   padding-bottom: 1rem;
+  margin: 0 5rem;
 }
 
 .menu {
   list-style: none;
   display: flex;
   font-size: 1.3rem;
-  position: absolute;
-  z-index: 10;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
 }
 
 .link {
@@ -33,4 +29,23 @@
 .link:hover,
 .active {
   border-bottom: 2px solid #ef697d;
+}
+
+@media (min-width: 768px) {
+  .header {
+    justify-content: flex-start;
+    position: relative;
+    z-index: 0;
+  }
+
+  .menu {
+    list-style: none;
+    display: flex;
+    font-size: 1.3rem;
+    position: absolute;
+    z-index: 10;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
 }
