--- a/src/components/Movies/MovieModal.module.css
+++ b/src/components/Movies/MovieModal.module.css
@@ -1,13 +1,11 @@
 .wrapper {
   display: flex;
+  flex-direction: column;
   position: relative;
 }
 
 .image {
-  position: absolute;
-  z-index: 10;
-  top: -1rem;
-  left: -1rem;
+  margin: 3rem auto 0;
 }
 
 .image img {
@@ -15,8 +13,8 @@
 }
 
 .description {
-  margin-left: 30rem;
   padding: 1.5rem 3rem;
+  margin-bottom: 2rem;
 }
 
 .title {
@@ -82,6 +80,36 @@
   border-radius: 50%;
   z-index: 20;
   right: 0;
-  top: 30rem;
+  top: 5rem;
   transform: translateX(50%);
+}
+
+@media (min-width: 768px) {
+  .wrapper {
+    display: flex;
+    display-direction: row;
+    position: relative;
+  }
+
+  .image {
+    position: absolute;
+    z-index: 10;
+    margin: 0;
+    top: -1rem;
+    left: -1rem;
+  }
+
+  .image img {
+    border-radius: 10px;
+  }
+
+  .description {
+    margin-left: 30rem;
+    padding: 3rem;
+    margin-bottom: 0;
+  }
+
+  .review_button {
+    top: 30rem;
+  }
 }
