--- a/src/components/UI/Modal.module.css
+++ b/src/components/UI/Modal.module.css
@@ -21,12 +21,12 @@
   animation: slide-down 300ms ease-out forwards;
 }
 
-/* @media (min-width: 768px) {
+@media (min-width: 768px) {
   .modal {
-    width: 40rem;
-    left: calc(50% - 20rem);
+    width: 70rem;
+    left: calc(50% - 35rem);
   }
-} */
+}
 
 @keyframes slide-down {
   from {
