--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 
 * {
   box-sizing: border-box;
@@ -7,11 +7,19 @@
 }
 
 html {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 62.5%;
 }
 
 body {
   margin: 0;
-  background-color: #0D1737;
+  background-color: #0d1737;
+}
+
+h1 {
+  color: #ffffff;
+}
+
+p {
+  color: #ffffff;
 }
