--- a/src/components/UI/Header.module.css
+++ b/src/components/UI/Header.module.css
@@ -1,29 +1,35 @@
 .header {
-  color: white;
+  width: 100%;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  padding: 2rem 4rem 0.5rem;
+  flex-direction: column;
+  padding: 1rem 4rem;
   background-color: #101e49;
+  backdrop-filter: blur(8px);
+  opacity: 0.9;
+  position: fixed;
+  z-index: 10;
+  top: 0;
+  left: 0;
 }
 
 .title {
-  font-size: 1.5rem;
-  padding-bottom: 1rem;
-  margin: 0 5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .menu {
   list-style: none;
   display: flex;
-  font-size: 1.3rem;
+  justify-content: center;
 }
 
 .link {
   padding: 1rem 0.5rem 0.8rem;
   margin: 0 1rem;
   text-decoration: none;
-  color: white;
+  color: #ffffff;
+  font-size: 1.2rem;
 }
 
 .link:hover,
@@ -32,20 +38,5 @@
 }
 
 @media (min-width: 768px) {
-  .header {
-    justify-content: flex-start;
-    position: relative;
-    z-index: 0;
-  }
-
-  .menu {
-    list-style: none;
-    display: flex;
-    font-size: 1.3rem;
-    position: absolute;
-    z-index: 10;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
+  
 }
