--- a/src/components/Movies/MovieModal.module.css
+++ b/src/components/Movies/MovieModal.module.css
@@ -22,7 +22,7 @@
   font-size: 3rem;
 }
 
-.line_spacer {
+.line-spacer {
   display: block;
   height: 1.5rem;
   width: 100%;
@@ -36,18 +36,21 @@
   width: 100%;
 }
 
-.description_flex {
+.description-flex {
   display: grid;
   grid-template-columns: 10rem 1fr;
   padding: 0 1rem;
 }
 
-.description_flex h1 {
+.description-flex h1 {
   font-size: 1.2rem;
+  color: #0d1737;
+  
 }
 
-.description_flex p {
+.description-flex p {
   font-size: 1.1rem;
+  color: #0d1737;
 }
 
 .boxes {
@@ -68,7 +71,7 @@
   column-gap: 1rem;
 }
 
-.review_button {
+.review-button {
   position: absolute;
   height: 8rem;
   width: 8rem;
@@ -109,7 +112,7 @@
     margin-bottom: 0;
   }
 
-  .review_button {
+  .review-button {
     top: 30rem;
   }
 }
