--- a/src/components/UI/Header.module.css
+++ b/src/components/UI/Header.module.css
@@ -3,9 +3,8 @@
   display: flex;
   flex-direction: column;
   padding: 1rem 4rem;
-  background-color: #101e49;
-  backdrop-filter: blur(8px);
-  opacity: 0.9;
+  background-color: rgba(16, 30, 73, 0.2);
+  backdrop-filter: blur(16px);
   position: fixed;
   z-index: 10;
   top: 0;
@@ -32,11 +31,15 @@
   font-size: 1.2rem;
 }
 
-.link:hover,
+.link:hover {
+  border-bottom: 2px solid #ef697d;
+  transform: translateY(-3px);
+  transition-duration: .1s;
+}
+
 .active {
   border-bottom: 2px solid #ef697d;
 }
 
 @media (min-width: 768px) {
-  
 }
