--- a/src/components/UI/Header.module.scss
+++ b/src/components/UI/Header.module.scss
@@ -1,20 +1,29 @@
+@import '../../mixin.scss';
+
 .header {
+  @include max-width;
+  @include center-col;
   width: 100%;
-  display: flex;
-  flex-direction: column;
-  padding: 1rem 4rem;
-  background-color: rgba(16, 30, 73, 0.2);
+  background-color: rgba(249, 250, 251, 0.1);
+  opacity: 0.8;
   backdrop-filter: blur(16px);
+  padding: 1.5rem;
   position: fixed;
   z-index: 10;
   top: 0;
   left: 0;
 }
 
-.title {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.top {
+  @include center-col;
+
+  @include media-md {
+    @include center-row;
+  }
+
+  h1 {
+    color: $primary-color;
+  }
 }
 
 .menu {
@@ -34,7 +43,7 @@
 .link:hover {
   border-bottom: 2px solid #ef697d;
   transform: translateY(-3px);
-  transition-duration: .1s;
+  transition-duration: 0.1s;
 }
 
 .active {
