--- a/src/index.scss
+++ b/src/index.scss
@@ -9,7 +9,6 @@
 
 html {
   font-family: 'Poppins', sans-serif;
-  font-size: 62.5%; // 10px/16px = 62.5% -> 1rem = 10px
 }
 
 body {
@@ -30,7 +29,7 @@ h1 {
   font-size: 2.25rem; /* 36px */
   line-height: 2.5rem; /* 40px */
 
-  @include media-xs {
+  @include media-sm {
     font-size: 3rem; /* 48px */
     line-height: 1;
   }
@@ -41,51 +40,51 @@ h2 {
   font-size: 1.875rem; /* 30px */
   line-height: 2.25rem; /* 36px */
 
-  @include media-xs {
+  @include media-sm {
     font-size: 2.25rem; /* 36px */
     line-height: 2.5rem; /* 40px */
   }
 }
 
 h3 {
-  font-weight: 600;  
+  font-weight: 600;
   font-size: 1.5rem; /* 24px */
   line-height: 2rem; /* 32px */
 
-  @include media-xs {
+  @include media-sm {
     font-size: 1.875rem; /* 30px */
     line-height: 2.25rem; /* 36px */
   }
 }
 
 h4 {
-  font-weight: 400; 
+  font-weight: 600;
   font-size: 1.25rem; /* 20px */
   line-height: 1.75rem; /* 28px */
 
-  @include media-xs {
+  @include media-sm {
     font-size: 1.5rem; /* 24px */
     line-height: 2rem; /* 32px */
   }
 }
 
 h5 {
-  font-weight: 400; 
+  font-weight: 400;
   font-size: 1.125rem; /* 18px */
   line-height: 1.75rem; /* 28px */
 
-  @include media-xs {
+  @include media-sm {
     font-size: 1.25rem; /* 20px */
     line-height: 1.75rem; /* 28px */
   }
 }
 
 h6 {
-  font-weight: 400; 
+  font-weight: 400;
   font-size: 1rem; /* 16px */
   line-height: 1.5rem; /* 24px */
 
-  @include media-xs {
+  @include media-sm {
     font-size: 1.125rem; /* 18px */
     line-height: 1.75rem; /* 28px */
   }
@@ -95,7 +94,7 @@ p {
   font-size: 0.875rem; /* 14px */
   line-height: 1.25rem; /* 20px */
 
-  @include media-xs {
+  @include media-sm {
     font-size: 1rem; /* 16px */
     line-height: 1.5rem; /* 24px */
   }
@@ -106,25 +105,55 @@ small {
   font-size: 0.75rem; /* 12px */
   line-height: 1rem; /* 16px */
 
-  @include media-xs {
+  @include media-sm {
     font-size: 0.875rem; /* 14px */
     line-height: 1.25rem; /* 20px */
   }
 }
 
+ul {
+  list-style: none;
+}
+
+li {
+  font-size: 0.875rem; /* 14px */
+  line-height: 1.25rem; /* 20px */
+
+  @include media-sm {
+    font-size: 1rem; /* 16px */
+    line-height: 1.5rem; /* 24px */
+  }
+}
+
 a {
   text-decoration: none;
+  font-size: 0.875rem; /* 14px */
+  line-height: 1.25rem; /* 20px */
+
+  @include media-sm {
+    font-size: 1rem; /* 16px */
+    line-height: 1.5rem; /* 24px */
+  }
 }
 
 button {
-  cursor: pointer;
   letter-spacing: 0.2rem;
+  font-weight: 600;
   text-transform: uppercase;
-  background-color: rgba(249, 250, 251, 0.3);
+  background-color: rgba(249, 250, 251, 0.2);
   opacity: 0.8;
   backdrop-filter: blur(16px);
+  cursor: pointer;
+  border-radius: 20px;
+  border: none;
+  padding: 0.5rem 1rem;
+  color: $base-color;
 
   &:hover {
     @include hover-effect;
+  }
+
+  @include media-sm {
+    padding: 0.7rem 1.25rem;
   }
 }
