--- a/src/components/UI/Header.module.scss
+++ b/src/components/UI/Header.module.scss
@@ -1,16 +1,19 @@
 @import '../../mixin.scss';
 
-.header {
-  @include max-width;
-  width: 100%;
+.wrapper {
   background-color: rgba(249, 250, 251, 0.1);
   opacity: 0.8;
   backdrop-filter: blur(16px);
-  padding: 1rem;
   position: fixed;
   z-index: 10;
   top: 0;
   left: 0;
+  width: 100%;
+  padding: 1rem;
+}
+
+.header {
+  @include max-width;
 }
 
 .mobile-top {
