--- a/src/index.scss
+++ b/src/index.scss
@@ -145,6 +145,28 @@ a {
   }
 }
 
+input {
+  padding: 1rem 0.5rem;
+  margin: 0.5rem 0;
+  border-radius: 5px;
+  border: none;
+  width: 80vw;
+  color: rgb(71 85 105);
+
+  &:hover {
+    @include hover-effect;
+  }
+
+  &:focus {
+    color: rgb(71 85 105);
+    background-color: rgb(254 252 232);
+  }
+
+  @include media-sm {
+    width: 18rem;
+  }
+}
+
 button {
   letter-spacing: 0.2rem;
   font-weight: 600;
