--- a/src/mixin.scss
+++ b/src/mixin.scss
@@ -61,7 +61,7 @@ $base-color: #ffffff;
 }
 
 @mixin flex-col-start {
-  text-align: center;
+  text-align: left;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -105,22 +105,13 @@ $base-color: #ffffff;
 
 @mixin section-container-wide {
   margin: 0 auto;
-  max-width: 300px;
+  max-width: 95vw;
   width: calc(100% - 2rem);
   padding: 2rem 0.5rem;
   height: auto;
   text-align: center;
 
-  @include media-md {
-    padding: 4rem;
-  }
-
-  @include media-sm {
-    padding: 2rem 1rem;
-    max-width: 400px;
-  }
-
-  @include media-md {
+  @include media-lg {
     padding: 4rem;
     max-width: 1200px;
   }
