--- a/src/components/Movies/MovieItem.module.scss
+++ b/src/components/Movies/MovieItem.module.scss
@@ -23,7 +23,7 @@
 
   .overlay {
     @include flex-col-start;
-    justify-content: start;
+    justify-content: flex-start;
     width: 100%;
     height: 100%;
     padding: 0.2rem;
@@ -79,7 +79,7 @@
 
     .overlay {
       @include flex-col-start;
-      justify-content: start;
+      justify-content: flex-start;
       width: 100%;
       height: 100%;
       padding: 1rem;
