--- a/src/components/Users/SignupForm.module.scss
+++ b/src/components/Users/SignupForm.module.scss
@@ -2,10 +2,11 @@
 
 .signup-form {
   @include flex-col-center;
+  max-width: 18rem;
+  margin: 0 auto;
 
   form {
     @include flex-col-start;
-    max-width: 18rem;
   }
 
   h2 {
