--- a/src/components/Movies/MovieModalDesktop.module.scss
+++ b/src/components/Movies/MovieModalDesktop.module.scss
@@ -1,31 +1,14 @@
 @import '../../mixin.scss';
 
-.desktop {
-  display: none;
-
-  @include media-md {
-    display: block;
-  }
-}
-
 .movie-modal {
   position: relative;
-
-  img {
-    border-radius: 10px;
-    position: absolute;
-    top: -3rem;
-    left: 0;
-    right: 0;
-    margin: 0 auto;
-  }
 
   .rate {
     @include flex-center;
     flex-wrap: wrap;
     position: absolute;
-    top: 8rem;
-    right: -0.5rem;
+    bottom: 2rem;
+    left: -2rem;
     height: 8rem;
     width: 8rem;
     border-radius: 50%;
@@ -41,32 +24,42 @@
     }
   }
 
-  .content {
-    @include flex-col-center;
-    padding: 17rem 1rem 1rem 1rem;
+  .container {
+    @include flex-center;
+    align-items: flex-start;
+    padding: 2rem;
 
-    .title {
-      color: $primary-color;
+    img {
+      border-radius: 10px;
     }
 
-    .line-spacer {
-      display: block;
-      height: 1.5rem;
-      width: 100%;
-      border-bottom: 1px solid rgb(243 244 246);
-      margin-bottom: 1.5rem;
-    }
+    .content {
+      @include flex-col-center;
+      padding: 1rem 2rem;
 
-    &-description {
-      @include flex-col-start;
-    }
+      .title {
+        color: $primary-color;
+      }
 
-    .spacer {
-      height: 1rem;
-    }
+      .line-spacer {
+        display: block;
+        height: 1.5rem;
+        width: 100%;
+        border-bottom: 1px solid rgb(243 244 246);
+        margin-bottom: 1.5rem;
+      }
 
-    .buttons {
-      @include flex-center;
+      &-description {
+        @include flex-col-start;
+      }
+
+      .spacer {
+        height: 1rem;
+      }
+
+      .buttons {
+        @include flex-center;
+      }
     }
   }
 }
