--- a/src/components/Movies/MoviesList.module.scss
+++ b/src/components/Movies/MoviesList.module.scss
@@ -1,5 +1,21 @@
 @import '../../mixin.scss';
 
+.movie-modal-mobile {
+  display: block;
+
+  @include media-md {
+    display: none;
+  }
+}
+
+.movie-modal-desktop {
+  display: none;
+
+  @include media-md {
+    display: block;
+  }
+}
+
 .movies-list {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(92px, 1fr));
