--- a/src/index.scss
+++ b/src/index.scss
@@ -153,6 +153,34 @@ input {
   width: 80vw;
   color: rgb(71 85 105);
   font-size: 0.875rem; /* 14px */
+  line-height: 1.25rem; /* 20px */
+
+  &:hover {
+    @include hover-effect;
+  }
+
+  &:focus {
+    color: rgb(71 85 105);
+    background-color: rgb(254 240 138);
+  }
+
+  @include media-sm {
+    width: 18rem;
+    font-size: 1rem; /* 16px */
+    line-height: 1.5rem; /* 24px */
+  }
+}
+
+textarea {
+  padding: 1rem 0.5rem;
+  margin: 0.5rem 0;
+  border-radius: 5px;
+  border: none;
+  width: 80vw;
+  color: rgb(71 85 105);
+  font-size: 0.875rem; /* 14px */
+  line-height: 1.25rem; /* 20px */
+  font-family: 'Poppins', sans-serif;
 
   &:hover {
     @include hover-effect;
