styled UsersLikes and UsersReviews page

--- a/src/components/Reviews/ReviewItem.module.scss
+++ b/src/components/Reviews/ReviewItem.module.scss
@@ -21,6 +21,10 @@
   h3 {
     color: $primary-color;
     text-align: center;
+
+    @include media-md {
+      text-align: start;
+    }
   }
 
   .container {
