--- a/src/components/UI/ErrorMessage.module.scss
+++ b/src/components/UI/ErrorMessage.module.scss
@@ -1,14 +1,19 @@
 @import '../../mixin.scss';
 
+.container {
+  padding-top: 1.5rem;
+}
+
 .error {
   background-color: rgba(238, 105, 125, 0.3);
   border-radius: 20px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
-  margin: 0rem auto;
-  margin-bottom: 1.5rem;
+  margin: 0 auto;
+  margin-bottom: 1rem;
   padding: 1.5rem 1rem;
   max-width: 300px;
   width: calc(100% - 2rem);
+  text-align: center;
 
   p {
     color: $accent-color;
