--- a/src/components/Reviews/ReviewItem.module.scss
+++ b/src/components/Reviews/ReviewItem.module.scss
@@ -2,6 +2,7 @@
 
 .review {
   margin: 0 auto;
+  margin-bottom: 1rem;
   padding-top: 1.5rem;
   max-width: 90vw;
   background-color: rgba(255, 255, 255, 0.2);
