--- a/src/mixin.scss
+++ b/src/mixin.scss
@@ -85,6 +85,7 @@ $base-color: #ffffff;
 
 @mixin section-container {
   margin: 0 auto;
+  margin-bottom: 1rem;
   max-width: 300px;
   width: calc(100% - 2rem);
   padding: 2rem 0.5rem;
@@ -105,6 +106,7 @@ $base-color: #ffffff;
 @mixin section-container-wide {
   margin: 0 auto;
   max-width: 95vw;
+  margin-bottom: 1rem;
   width: calc(100% - 2rem);
   padding: 2rem 0.5rem;
   height: auto;
